implemented input trimming

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       class="input"
       [formControl]="passwordControl"
       type="password"
+      trim
     >
     <div class="sections">
       <div
